tests/baselines/reference/typeofOperatorWithEnumType.errors.txt
typeofOperatorWithEnumType.ts(22,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== typeofOperatorWithEnumType.ts (1 errors) ====
    // typeof  operator on enum type
    
    enum ENUM { };
    enum ENUM1 { A, B, "" };
    
    // enum type var
    var ResultIsString1 = typeof ENUM;
    var ResultIsString2 = typeof ENUM1;
    
    // enum type expressions
    var ResultIsString3 = typeof ENUM1["A"];
    var ResultIsString4 = typeof (ENUM[0] + ENUM1["B"]);
    
    // multiple typeof  operators
    var ResultIsString5 = typeof typeof ENUM;
    var ResultIsString6 = typeof typeof typeof (ENUM[0] + ENUM1.B);
    
    // miss assignment operators
    typeof ENUM;
    typeof ENUM1;
    typeof ENUM1["B"];
    typeof ENUM, ENUM1;
    ~~~~~~~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    
    // use typeof in type query
    enum z { };
    z: typeof ENUM;
    z: typeof ENUM1;